--- a/TP1_ALU/TP1_ALU.runs/impl_1/usage_statistics_webtalk.html
+++ b/TP1_ALU/TP1_ALU.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2552052</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Sep 24 16:08:20 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Sep 24 18:26:29 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2019.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>c107d730133b4978816dd90722abcc68</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>3</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>4</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>7131fded7bd8572895dddd51cec8df24</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>7131fded7bd8572895dddd51cec8df24</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -21,7 +21,7 @@
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-7700HQ CPU @ 2.80GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3438.765 MHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3440.615 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>LinuxMint</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Linux Mint 19 Tara</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>16.000 GB</TD>
@@ -33,38 +33,44 @@
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_hdl_netlist_block_design=1</TD>
    <TD>basedialog_cancel=2</TD>
-   <TD>basedialog_ok=7</TD>
+   <TD>basedialog_ok=10</TD>
    <TD>boardchooser_board_table=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=2</TD>
    <TD>constraintschooserpanel_add_files=1</TD>
-   <TD>filesetpanel_file_set_panel_tree=13</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=5</TD>
+   <TD>filesetpanel_file_set_panel_tree=40</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=6</TD>
 </TR><TR ALIGN='LEFT'>   <TD>gettingstartedview_create_new_project=1</TD>
+   <TD>gettingstartedview_open_project=1</TD>
+   <TD>hjfilechooserhelpers_jump_to_desktop=1</TD>
    <TD>mainmenumgr_file=4</TD>
-   <TD>mainmenumgr_project=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_project=2</TD>
    <TD>msgtreepanel_message_view_tree=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_add_sources=2</TD>
-   <TD>pacommandnames_auto_update_hier=2</TD>
+   <TD>openfileaction_ok=1</TD>
+   <TD>pacommandnames_add_sources=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=4</TD>
    <TD>pacommandnames_close_project=1</TD>
    <TD>pacommandnames_open_project=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_project_name=1</TD>
+   <TD>projectnamechooser_project_name=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdicommands_delete=2</TD>
    <TD>rdicommands_line_comment=1</TD>
-   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=1</TD>
-   <TD>srcmenu_ip_hierarchy=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>syntheticastatemonitor_cancel=1</TD>
+   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=3</TD>
+   <TD>srcmenu_ip_hierarchy=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcmenu_refresh_hierarchy=1</TD>
+   <TD>syntheticastatemonitor_cancel=1</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>addsources=2</TD>
+<TR ALIGN='LEFT'>   <TD>addsources=3</TD>
    <TD>closeproject=1</TD>
+   <TD>editdelete=2</TD>
    <TD>newproject=1</TD>
-   <TD>openproject=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runbitgen=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openproject=2</TD>
+   <TD>runbitgen=6</TD>
    <TD>showview=1</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=2</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=3</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -142,6 +148,162 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>cfgbvs-1=1</TD>
+</TR>   </TABLE>
+   </TD></TR>
+  </TABLE><BR>
+ <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+  <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>report_methodology</B></TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>-append=default::[not_specified]</TD>
+    <TD>-checks=default::[not_specified]</TD>
+    <TD>-fail_on=default::[not_specified]</TD>
+    <TD>-force=default::[not_specified]</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-format=default::[not_specified]</TD>
+    <TD>-messages=default::[not_specified]</TD>
+    <TD>-name=default::[not_specified]</TD>
+    <TD>-return_string=default::[not_specified]</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-slack_lesser_than=default::[not_specified]</TD>
+    <TD>-waived=default::[not_specified]</TD>
+</TR>   </TABLE>
+   </TD></TR>
+  </TABLE><BR>
+ <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+  <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>report_power</B></TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>-advisory=default::[not_specified]</TD>
+    <TD>-append=default::[not_specified]</TD>
+    <TD>-file=[specified]</TD>
+    <TD>-format=default::text</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-hier=default::power</TD>
+    <TD>-hierarchical_depth=default::4</TD>
+    <TD>-l=default::[not_specified]</TD>
+    <TD>-name=default::[not_specified]</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-no_propagation=default::[not_specified]</TD>
+    <TD>-return_string=default::[not_specified]</TD>
+    <TD>-rpx=[specified]</TD>
+    <TD>-verbose=default::[not_specified]</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-vid=default::[not_specified]</TD>
+    <TD>-xpe=default::[not_specified]</TD>
+</TR>   </TABLE>
+   </TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>airflow=250 (LFM)</TD>
+    <TD>ambient_temp=25.0 (C)</TD>
+    <TD>bi-dir_toggle=12.500000</TD>
+    <TD>bidir_output_enable=1.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
+    <TD>board_selection=medium (10&quot;x10&quot;)</TD>
+    <TD>clocks=0.000000</TD>
+    <TD>confidence_level_clock_activity=High</TD>
+</TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
+    <TD>confidence_level_device_models=High</TD>
+    <TD>confidence_level_internal_activity=High</TD>
+    <TD>confidence_level_io_activity=Low</TD>
+</TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
+    <TD>customer=TBD</TD>
+    <TD>customer_class=TBD</TD>
+    <TD>devstatic=0.071713</TD>
+</TR><TR ALIGN='LEFT'>    <TD>die=xc7a35tcpg236-1</TD>
+    <TD>dsp_output_toggle=12.500000</TD>
+    <TD>dynamic=0.005893</TD>
+    <TD>effective_thetaja=5.0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
+    <TD>family=artix7</TD>
+    <TD>ff_toggle=12.500000</TD>
+    <TD>flow_state=routed</TD>
+</TR><TR ALIGN='LEFT'>    <TD>heatsink=medium (Medium Profile)</TD>
+    <TD>i/o=0.005862</TD>
+    <TD>input_toggle=12.500000</TD>
+    <TD>junction_temp=25.4 (C)</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.000000</TD>
+    <TD>mgtavcc_dynamic_current=0.000000</TD>
+    <TD>mgtavcc_static_current=0.000000</TD>
+    <TD>mgtavcc_total_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>mgtavcc_voltage=1.000000</TD>
+    <TD>mgtavtt_dynamic_current=0.000000</TD>
+    <TD>mgtavtt_static_current=0.000000</TD>
+    <TD>mgtavtt_total_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
+    <TD>netlist_net_matched=NA</TD>
+    <TD>off-chip_power=0.000000</TD>
+    <TD>on-chip_power=0.077606</TD>
+</TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
+    <TD>output_load=5.000000</TD>
+    <TD>output_toggle=12.500000</TD>
+    <TD>package=cpg236</TD>
+</TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=0.160000</TD>
+    <TD>pct_inputs_defined=0</TD>
+    <TD>platform=lin64</TD>
+    <TD>process=typical</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ram_enable=50.000000</TD>
+    <TD>ram_write=50.000000</TD>
+    <TD>read_saif=False</TD>
+    <TD>set/reset_probability=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>signal_rate=False</TD>
+    <TD>signals=0.000031</TD>
+    <TD>simulation_file=None</TD>
+    <TD>speedgrade=-1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
+    <TD>temp_grade=commercial</TD>
+    <TD>thetajb=7.5 (C/W)</TD>
+    <TD>thetasa=4.6 (C/W)</TD>
+</TR><TR ALIGN='LEFT'>    <TD>toggle_rate=False</TD>
+    <TD>user_board_temp=25.0 (C)</TD>
+    <TD>user_effective_thetaja=5.0</TD>
+    <TD>user_junc_temp=25.4 (C)</TD>
+</TR><TR ALIGN='LEFT'>    <TD>user_thetajb=7.5 (C/W)</TD>
+    <TD>user_thetasa=4.6 (C/W)</TD>
+    <TD>vccadc_dynamic_current=0.000000</TD>
+    <TD>vccadc_static_current=0.020000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccadc_total_current=0.020000</TD>
+    <TD>vccadc_voltage=1.800000</TD>
+    <TD>vccaux_dynamic_current=0.000214</TD>
+    <TD>vccaux_io_dynamic_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_io_static_current=0.000000</TD>
+    <TD>vccaux_io_total_current=0.000000</TD>
+    <TD>vccaux_io_voltage=1.800000</TD>
+    <TD>vccaux_static_current=0.012615</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.012829</TD>
+    <TD>vccaux_voltage=1.800000</TD>
+    <TD>vccbram_dynamic_current=0.000000</TD>
+    <TD>vccbram_static_current=0.000162</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000162</TD>
+    <TD>vccbram_voltage=1.000000</TD>
+    <TD>vccint_dynamic_current=0.000063</TD>
+    <TD>vccint_static_current=0.009544</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.009607</TD>
+    <TD>vccint_voltage=1.000000</TD>
+    <TD>vcco12_dynamic_current=0.000000</TD>
+    <TD>vcco12_static_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco12_total_current=0.000000</TD>
+    <TD>vcco12_voltage=1.200000</TD>
+    <TD>vcco135_dynamic_current=0.000000</TD>
+    <TD>vcco135_static_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco135_total_current=0.000000</TD>
+    <TD>vcco135_voltage=1.350000</TD>
+    <TD>vcco15_dynamic_current=0.000000</TD>
+    <TD>vcco15_static_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco15_total_current=0.000000</TD>
+    <TD>vcco15_voltage=1.500000</TD>
+    <TD>vcco18_dynamic_current=0.000000</TD>
+    <TD>vcco18_static_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco18_total_current=0.000000</TD>
+    <TD>vcco18_voltage=1.800000</TD>
+    <TD>vcco25_dynamic_current=0.000000</TD>
+    <TD>vcco25_static_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco25_total_current=0.000000</TD>
+    <TD>vcco25_voltage=2.500000</TD>
+    <TD>vcco33_dynamic_current=0.001650</TD>
+    <TD>vcco33_static_current=0.001000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.002650</TD>
+    <TD>vcco33_voltage=3.300000</TD>
+    <TD>version=2019.1</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
