--- a/TP1_ALU/TP1_ALU.runs/impl_1/usage_statistics_webtalk.html
+++ b/TP1_ALU/TP1_ALU.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2552052</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Sep 24 18:26:29 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Sep 25 18:22:38 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2019.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>c107d730133b4978816dd90722abcc68</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>4</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>5</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>7131fded7bd8572895dddd51cec8df24</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>7131fded7bd8572895dddd51cec8df24</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -21,7 +21,7 @@
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-7700HQ CPU @ 2.80GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3440.615 MHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3476.951 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>LinuxMint</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Linux Mint 19 Tara</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>16.000 GB</TD>
@@ -32,45 +32,49 @@
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_hdl_netlist_block_design=1</TD>
-   <TD>basedialog_cancel=2</TD>
-   <TD>basedialog_ok=10</TD>
+   <TD>basedialog_cancel=3</TD>
+   <TD>basedialog_ok=13</TD>
    <TD>boardchooser_board_table=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=2</TD>
    <TD>constraintschooserpanel_add_files=1</TD>
-   <TD>filesetpanel_file_set_panel_tree=40</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=6</TD>
+   <TD>filesetpanel_file_set_panel_tree=54</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=7</TD>
 </TR><TR ALIGN='LEFT'>   <TD>gettingstartedview_create_new_project=1</TD>
-   <TD>gettingstartedview_open_project=1</TD>
+   <TD>gettingstartedview_open_project=4</TD>
    <TD>hjfilechooserhelpers_jump_to_desktop=1</TD>
-   <TD>mainmenumgr_file=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_project=2</TD>
+   <TD>mainmenumgr_checkpoint=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_file=8</TD>
+   <TD>mainmenumgr_ip=1</TD>
+   <TD>mainmenumgr_project=4</TD>
    <TD>msgtreepanel_message_view_tree=5</TD>
-   <TD>openfileaction_ok=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openfileaction_ok=1</TD>
    <TD>pacommandnames_add_sources=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=4</TD>
-   <TD>pacommandnames_close_project=1</TD>
+   <TD>pacommandnames_auto_update_hier=4</TD>
+   <TD>pacommandnames_close_project=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_import_all_srcs=1</TD>
    <TD>pacommandnames_open_project=1</TD>
    <TD>projectnamechooser_project_name=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>rdicommands_delete=2</TD>
-   <TD>rdicommands_line_comment=1</TD>
+   <TD>rdicommands_delete=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdicommands_line_comment=1</TD>
    <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=3</TD>
    <TD>srcmenu_ip_hierarchy=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcmenu_refresh_hierarchy=1</TD>
-   <TD>syntheticastatemonitor_cancel=1</TD>
+   <TD>srcmenu_refresh_hierarchy=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>syntheticastatemonitor_cancel=1</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=3</TD>
-   <TD>closeproject=1</TD>
+   <TD>closeproject=3</TD>
    <TD>editdelete=2</TD>
    <TD>newproject=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>openproject=2</TD>
-   <TD>runbitgen=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openproject=5</TD>
+   <TD>runbitgen=7</TD>
    <TD>showview=1</TD>
+   <TD>ui.views.c.aq=1</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=3</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=6</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -109,16 +113,32 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>gnd=1</TD>
-    <TD>ibuf=8</TD>
+<TR ALIGN='LEFT'>    <TD>bufg=1</TD>
+    <TD>carry4=2</TD>
+    <TD>fdre=22</TD>
+    <TD>gnd=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ibuf=13</TD>
+    <TD>lut1=1</TD>
+    <TD>lut3=9</TD>
+    <TD>lut4=2</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut5=3</TD>
+    <TD>lut6=21</TD>
     <TD>obuf=16</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>gnd=1</TD>
-    <TD>ibuf=8</TD>
+<TR ALIGN='LEFT'>    <TD>bufg=1</TD>
+    <TD>carry4=2</TD>
+    <TD>fdre=22</TD>
+    <TD>gnd=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ibuf=13</TD>
+    <TD>lut1=1</TD>
+    <TD>lut3=9</TD>
+    <TD>lut4=2</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut5=3</TD>
+    <TD>lut6=21</TD>
     <TD>obuf=16</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -168,6 +188,12 @@
     <TD>-waived=default::[not_specified]</TD>
 </TR>   </TABLE>
    </TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>timing-18=28</TD>
+</TR>   </TABLE>
+   </TD></TR>
   </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>report_power</B></TD></TR>
@@ -199,29 +225,29 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.000000</TD>
+    <TD>clocks=0.000534</TD>
     <TD>confidence_level_clock_activity=High</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
-    <TD>confidence_level_internal_activity=High</TD>
+    <TD>confidence_level_internal_activity=Medium</TD>
     <TD>confidence_level_io_activity=Low</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.071713</TD>
+    <TD>devstatic=0.071720</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a35tcpg236-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.005893</TD>
+    <TD>dynamic=0.009272</TD>
     <TD>effective_thetaja=5.0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
     <TD>ff_toggle=12.500000</TD>
     <TD>flow_state=routed</TD>
 </TR><TR ALIGN='LEFT'>    <TD>heatsink=medium (Medium Profile)</TD>
-    <TD>i/o=0.005862</TD>
+    <TD>i/o=0.008333</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=25.4 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.000150</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -232,13 +258,13 @@
 </TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=0.077606</TD>
+    <TD>on-chip_power=0.080992</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
     <TD>package=cpg236</TD>
-</TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=0.160000</TD>
-    <TD>pct_inputs_defined=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=0.190000</TD>
+    <TD>pct_inputs_defined=7</TD>
     <TD>platform=lin64</TD>
     <TD>process=typical</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ram_enable=50.000000</TD>
@@ -246,7 +272,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>signal_rate=False</TD>
-    <TD>signals=0.000031</TD>
+    <TD>signals=0.000255</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
@@ -263,21 +289,21 @@
     <TD>vccadc_static_current=0.020000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccadc_total_current=0.020000</TD>
     <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.000214</TD>
+    <TD>vccaux_dynamic_current=0.000302</TD>
     <TD>vccaux_io_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_io_static_current=0.000000</TD>
     <TD>vccaux_io_total_current=0.000000</TD>
     <TD>vccaux_io_voltage=1.800000</TD>
-    <TD>vccaux_static_current=0.012615</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.012829</TD>
+    <TD>vccaux_static_current=0.012616</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.012918</TD>
     <TD>vccaux_voltage=1.800000</TD>
     <TD>vccbram_dynamic_current=0.000000</TD>
     <TD>vccbram_static_current=0.000162</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000162</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.000063</TD>
-    <TD>vccint_static_current=0.009544</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.009607</TD>
+    <TD>vccint_dynamic_current=0.001036</TD>
+    <TD>vccint_static_current=0.009550</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.010587</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -299,9 +325,9 @@
     <TD>vcco25_static_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco25_total_current=0.000000</TD>
     <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=0.001650</TD>
+    <TD>vcco33_dynamic_current=0.002331</TD>
     <TD>vcco33_static_current=0.001000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.002650</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.003331</TD>
     <TD>vcco33_voltage=3.300000</TD>
     <TD>version=2019.1</TD>
 </TR>   </TABLE>
@@ -314,8 +340,8 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>clocking</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufgctrl_available=32</TD>
     <TD>bufgctrl_fixed=0</TD>
-    <TD>bufgctrl_used=0</TD>
-    <TD>bufgctrl_util_percentage=0.00</TD>
+    <TD>bufgctrl_used=1</TD>
+    <TD>bufgctrl_util_percentage=3.13</TD>
 </TR><TR ALIGN='LEFT'>    <TD>bufhce_available=72</TD>
     <TD>bufhce_fixed=0</TD>
     <TD>bufhce_used=0</TD>
@@ -413,9 +439,23 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>primitives</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
-    <TD>ibuf_used=8</TD>
-    <TD>obuf_functional_category=IO</TD>
+<TR ALIGN='LEFT'>    <TD>bufg_functional_category=Clock</TD>
+    <TD>bufg_used=1</TD>
+    <TD>carry4_functional_category=CarryLogic</TD>
+    <TD>carry4_used=2</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdre_functional_category=Flop &amp; Latch</TD>
+    <TD>fdre_used=22</TD>
+    <TD>ibuf_functional_category=IO</TD>
+    <TD>ibuf_used=13</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3_functional_category=LUT</TD>
+    <TD>lut3_used=9</TD>
+    <TD>lut4_functional_category=LUT</TD>
+    <TD>lut4_used=2</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut5_functional_category=LUT</TD>
+    <TD>lut5_used=3</TD>
+    <TD>lut6_functional_category=LUT</TD>
+    <TD>lut6_used=21</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
     <TD>obuf_used=16</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -432,60 +472,70 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=0</TD>
-    <TD>lut_as_logic_util_percentage=0.00</TD>
+    <TD>lut_as_logic_used=33</TD>
+    <TD>lut_as_logic_util_percentage=0.16</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=41600</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=0</TD>
-    <TD>register_as_flip_flop_util_percentage=0.00</TD>
+    <TD>register_as_flip_flop_used=22</TD>
+    <TD>register_as_flip_flop_util_percentage=0.05</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=41600</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=0</TD>
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=20800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=0</TD>
-    <TD>slice_luts_util_percentage=0.00</TD>
+    <TD>slice_luts_used=33</TD>
+    <TD>slice_luts_util_percentage=0.16</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=0</TD>
-    <TD>slice_registers_util_percentage=0.00</TD>
+    <TD>slice_registers_used=22</TD>
+    <TD>slice_registers_util_percentage=0.05</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=0</TD>
-    <TD>lut_as_logic_util_percentage=0.00</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=33</TD>
+    <TD>lut_as_logic_util_percentage=0.16</TD>
     <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=0</TD>
-    <TD>register_driven_from_outside_the_slice_used=0</TD>
-    <TD>register_driven_from_within_the_slice_fixed=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=5</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=5</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=17</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=17</TD>
+    <TD>register_driven_from_outside_the_slice_used=22</TD>
+    <TD>register_driven_from_within_the_slice_fixed=22</TD>
     <TD>register_driven_from_within_the_slice_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=0</TD>
-    <TD>slice_registers_util_percentage=0.00</TD>
-    <TD>slice_used=0</TD>
-    <TD>slice_util_percentage=0.00</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=22</TD>
+    <TD>slice_registers_util_percentage=0.05</TD>
+    <TD>slice_used=11</TD>
+    <TD>slice_util_percentage=0.13</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=0</TD>
+    <TD>slicel_used=8</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=0</TD>
+    <TD>slicem_used=3</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=8150</TD>
     <TD>unique_control_sets_fixed=8150</TD>
-    <TD>unique_control_sets_used=0</TD>
-    <TD>unique_control_sets_util_percentage=0.00</TD>
+    <TD>unique_control_sets_used=3</TD>
+    <TD>unique_control_sets_util_percentage=0.04</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.04</TD>
+    <TD>using_o5_and_o6_used=2</TD>
+    <TD>using_o5_output_only_fixed=2</TD>
+    <TD>using_o5_output_only_used=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
+    <TD>using_o6_output_only_used=31</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -576,8 +626,8 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>elapsed=00:00:15s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=573.227MB</TD>
-    <TD>memory_peak=2016.277MB</TD>
+    <TD>memory_gain=563.195MB</TD>
+    <TD>memory_peak=2006.242MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
