--- a/TP4_MIPS/TP4_MIPS.sim/sim_1/behav/xsim/xsim.dir/eq2_file_tb_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/TP4_MIPS/TP4_MIPS.sim/sim_1/behav/xsim/xsim.dir/eq2_file_tb_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2552052</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Jul  6 17:33:27 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Jul  6 20:12:45 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2019.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>e25cc01912a946c0a26cdad418b243aa</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>2b011427-ecc6-49e8-8877-97b2ecdbe51e</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>2b011427-ecc6-49e8-8877-97b2ecdbe51e</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>3</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>206c7a62-cadd-4bd4-9f52-df8309f3af07</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>206c7a62-cadd-4bd4-9f52-df8309f3af07</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>not_applicable</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>not_applicable</TD>
@@ -20,11 +20,11 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-7700HQ CPU @ 2.80GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3474.819 MHz</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>LinuxMint</TD>
-  <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Linux Mint 19 Tara</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>16.000 GB</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i3-4100M CPU @ 2.50GHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2097.983 MHz</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>ManjaroLinux</TD>
+  <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Manjaro Linux</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>6.000 GB</TD>
   <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -35,27 +35,17 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>command=xelab</TD>
-    <TD>debug=typical</TD>
-    <TD>dpi_used=false</TD>
-    <TD>file_counter=3</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gendll=false</TD>
-    <TD>hwcosim=false</TD>
-    <TD>sdfmodeling=false</TD>
-    <TD>vhdl2008=false</TD>
+<TR ALIGN='LEFT'>    <TD>command=xsim</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>compiler_memory=210576_KB</TD>
-    <TD>compiler_time=0.97_sec</TD>
-    <TD>simulation_image_code=23 KB</TD>
-    <TD>simulation_image_data=3 KB</TD>
-</TR><TR ALIGN='LEFT'>    <TD>total_instances=3</TD>
-    <TD>total_nets=0</TD>
-    <TD>total_processes=22</TD>
-    <TD>xilinx_hdl_libraries_used=secureip unimacro_ver unisims_ver </TD>
+<TR ALIGN='LEFT'>    <TD>iteration=1</TD>
+    <TD>runtime=1 us</TD>
+    <TD>simulation_memory=118992_KB</TD>
+    <TD>simulation_time=0.06_sec</TD>
+</TR><TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
