--- a/TP1_ALU/TP1_ALU.sim/sim_1/behav/xsim/xsim.dir/top_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/TP1_ALU/TP1_ALU.sim/sim_1/behav/xsim/xsim.dir/top_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2552052</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Sep 30 17:49:39 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Sep 30 18:28:10 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2019.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>c107d730133b4978816dd90722abcc68</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>2b011427-ecc6-49e8-8877-97b2ecdbe51e</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>2b011427-ecc6-49e8-8877-97b2ecdbe51e</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
@@ -21,7 +21,7 @@
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-7700HQ CPU @ 2.80GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3755.821 MHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3400.201 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>LinuxMint</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Linux Mint 19 Tara</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>16.000 GB</TD>
@@ -35,27 +35,17 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>command=xelab</TD>
-    <TD>debug=typical</TD>
-    <TD>dpi_used=false</TD>
-    <TD>file_counter=3</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gendll=false</TD>
-    <TD>hwcosim=false</TD>
-    <TD>sdfmodeling=false</TD>
-    <TD>vhdl2008=false</TD>
+<TR ALIGN='LEFT'>    <TD>command=xsim</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>compiler_memory=210800_KB</TD>
-    <TD>compiler_time=1.18_sec</TD>
-    <TD>simulation_image_code=22 KB</TD>
-    <TD>simulation_image_data=3 KB</TD>
-</TR><TR ALIGN='LEFT'>    <TD>total_instances=3</TD>
-    <TD>total_nets=0</TD>
-    <TD>total_processes=18</TD>
-    <TD>xilinx_hdl_libraries_used=secureip unimacro_ver unisims_ver </TD>
+<TR ALIGN='LEFT'>    <TD>iteration=0</TD>
+    <TD>runtime=1 us</TD>
+    <TD>simulation_memory=125600_KB</TD>
+    <TD>simulation_time=0.03_sec</TD>
+</TR><TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
